--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,13 @@ buildNumber.properties
 .project
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
+
+**/.mvn
+**/mvnw
+**/mvnw.cmd
+
+**/target/
+
+.idea
+
+**/.gitignore
